creusot/tests/should_fail/prusti/deref/box2.stderr
error: invalid box dereference of zombie expression
 --> box2.rs:4:21
  |
4 | #[ensures(result == x.0)]
  |                     ^

error: aborting due to 1 previous error

